# chess-knight-animated

./: LICENSE  README.md
Part1/: CMakeLists.txt  README.md  knight.cpp  main.cpp
Part2/: CMakeLists.txt  ChessKnightPassFinder.cpp  ChessKnightPassFinder.h  README.md  chessknightpassfinder.cpp  chessknightpathfinder.cpp  chessknightpathfinder.ui  main.cpp  resources.qrc  сhessknightpassfinder.h
